Updated html part
Changes have been incurred upon form tags for spacings.

--- a/HTML-CSS{PORTFOLIO} PROJECT.html
+++ b/HTML-CSS{PORTFOLIO} PROJECT.html
@@ -89,7 +89,7 @@
                       <li>Felt good, Wanna hire me???</li>
                       <a href="#">><li><size:20>HIRE ME!  &#128070</size:20></li></a><br><br>
                       <p>OR</p><br><br>
-                      <li>Reach me at <span>9829XXXXX</span></li>
+                      <li>Reach me at <span>9829XXXX</span></li>
                     </ul>
                   </div>
                 </div>
